# backend/docs/tripService/swagger.json
@@ -484,17 +484,13 @@
         "models.CreateTripQueryInput": {
             "type": "object",
             "required": [
-                "country",
                 "duration",
                 "focus",
+                "location",
                 "maximum_distance",
                 "secrets"
             ],
             "properties": {
-                "country": {
-                    "type": "string",
-                    "example": "Germany"
-                },
                 "duration": {
                     "type": "integer",
                     "example": 10
@@ -507,6 +503,10 @@
                         "Mixed"
                     ],
                     "example": "Mixed"
+                },
+                "location": {
+                    "type": "string",
+                    "example": "Germany"
                 },
                 "maximum_distance": {
                     "type": "integer",
@@ -612,10 +612,6 @@
         "models.TripQuery": {
             "type": "object",
             "properties": {
-                "country": {
-                    "type": "string",
-                    "example": "Germany"
-                },
                 "created_at": {
                     "type": "string",
                     "example": "2023-12-01T12:37:59.008583Z"
@@ -636,6 +632,10 @@
                 "id": {
                     "type": "integer",
                     "example": 1
+                },
+                "location": {
+                    "type": "string",
+                    "example": "Germany"
                 },
                 "maximum_distance": {
                     "type": "integer",
@@ -723,18 +723,14 @@
         "models.UpdateTripQueryInput": {
             "type": "object",
             "required": [
-                "country",
                 "duration",
                 "focus",
                 "id",
+                "location",
                 "maximum_distance",
                 "secrets"
             ],
             "properties": {
-                "country": {
-                    "type": "string",
-                    "example": "Germany"
-                },
                 "duration": {
                     "type": "integer",
                     "example": 10
@@ -751,6 +747,10 @@
                 "id": {
                     "type": "integer",
                     "example": 1
+                },
+                "location": {
+                    "type": "string",
+                    "example": "Germany"
                 },
                 "maximum_distance": {
                     "type": "integer",
